TBD - 2.3.1
- Bugfix: When no validating callsigns, some ADIF fields were exported even if they were empty.
- Bugfix: In some conditions, not identified propagation modes were exported as "NO".
- Bugfix: VUCC_GRIDS validation was not properly done.
- Improvement: Code improvement in the MainWindowInputQSO class.

Oct 2022 - 2.3
- Improvement: Code optimization (TNX JohnS0819)
    https://github.com/ea4k/klog/pull/485
- Bugfix: Calls like EA4K/P were not identified as EA.
- Bugfix: Adding DXCluster servers was failing. (Closes #492) (TNX EA7IXM)
- Bugfix: When accepting changes on Settings, the settings were being readed twice, causing errors an delays. (Closes #495)
- Bugfix: QSOS with a lotw_qsl_sent status as NULL where not identified when queuing QSOs for LoTW. (closes #514)
- Improvement: Added the modes and propagation modes of ADIF  3.1.3 (Closes #509, #510)
- Improvement UI: Freq & RST labels have been reorganized for clarity.
- Improvement: Windows package updated to hamlib 4.4.
- Improvement: Minor UI changes in the Setup->misc tab.
- Improvement: Showing seconds in the QSO edit can be selected by the user.
- Improvement: LoTW upload process allows the user to select a specific locator to be uploaded to be matched with TQSL locations.
- Improvement: Changed how hamlib is initialized to speed-up the setup widget exit, specially for non-hamlib users.
- Improvement: Some code cleaning.

Aug 2022 - 2.2.1
- Bugfix: Temporary bugfix for Setup eLog Page preventing crash on start. (Closes #489)
- Bugfix: Temporary quick fix to prevent call validation in some classes that may cause errors. (Opens #490)
- Bugfix: Config for real time for clublog was not properly managed.
- Bugfix: Calls like EA4K/MM were identified like Scotland, not maritime.
- Improvement: Code improvement in the Setup of eLogs.
- Tests: Tests for SetupPageElog added.

Aug 2022 - 2.2
- Bugfix: DL was not properly shown in the DXCC status table (Closes #460) (TNX N6PAZ)