@@ -32,7 +32,7 @@
 #include <QWidget>
 #include <QtWidgets>
 #include "../dataproxy_sqlite.h"
-#include "../locator.h"
+//#include "../locator.h"
 #include "../utilities.h"
 
 class MainWindowSatTab : public QWidget
@@ -61,7 +61,7 @@ public:
     void setUpLinkFreq(const double _t);
     void setDownLinkFreq(const double _t);
 
-    void setLocator(const QString &_t);
+    //void setLocator(const QString &_t);
     void refreshData();
     void setModifying (const bool _m);
     void setKeep(const bool _b);
@@ -79,13 +79,13 @@ signals:
     void satRxFreqChanged(const double _p);
     void satTXFreqNeeded(const double _p);
     void satRXFreqNeeded(const double _p);
-    void dxLocatorChanged(const QString &_p);
+    //void dxLocatorChanged(const QString &_p);
     void returnPressed();
 
 private slots:
     void slotSatNameTextChanged();
     void slotSatModeTextChanged();
-    void slotSatDXLocTextChanged();
+    //void slotSatDXLocTextChanged();
     void slotSatNameComboBoxChanged();
     void slotSatBandRXComboBoxChanged();
     void slotSatBandTXComboBoxChanged();
@@ -109,23 +109,21 @@ private:
 
     QLineEdit *satNameLineEdit;
     QLineEdit *satModeLineEdit;
-    QLineEdit *satDXLocatorLineEdit;
+    //QLineEdit *satDXLocatorLineEdit;
     QLabel *satOtherLabel;
     QCheckBox *keepThisDataForNextQSOQcheckbox;
-    //QComboBox *satNameComboBox;
-    //QPushButton *satNamePushButon;
-    //QComboBox *satNameComboBox, *satModeComboBox;
+
     QComboBox *satNameComboBox;
     QComboBox *satBandTXComboBox, *satBandRXComboBox;
     QStringList satNames, satModes;
     QStringList satellitesList;
-    //bool txFreqBeingAutoChanged, rxFreqBeingAutoChanged, updatingBands;
+
     bool updatingBands;
     QPalette palRed, palBlack, palWhite; // To paint Text in red or black(normal)
 
     QDoubleSpinBox *txFreqSpinBox, *rxFreqSpinBox;
     DataProxy_SQLite *dataProxy;
-    Locator *locator;
+
     Utilities *util;
     double freqTX, freqRX;
 
